# vault-secret-cli

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  security.md
src/vault_secret_cli/: __init__.py
src/vault_secret_cli/application/: formatters.py  services.py
src/vault_secret_cli/domain/: errors.py  models.py  ports.py
src/vault_secret_cli/infrastructure/: config.py
src/vault_secret_cli/infrastructure/vault/: __init__.py  client.py
src/vault_secret_cli/presentation/: cli.py
tests/: conftest.py
tests/integration/: test_vault_contract.py
tests/unit/: test_cli.py  test_formatters.py  test_secret_service.py
