[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "vault-secret-cli"
version = "0.1.0"
description = "A secure, production-ready Python CLI for retrieving secrets from HashiCorp Vault."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["hashicorp-vault", "vault", "secrets", "cli", "security", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "hvac>=2.3.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/your-username/vault-secret-cli"
Repository = "https://github.com/your-username/vault-secret-cli"
Issues = "https://github.com/your-username/vault-secret-cli/issues"
Documentation = "https://github.com/your-username/vault-secret-cli#readme"

[project.scripts]
vault-secret = "vault_secret_cli.presentation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vault_secret_cli"]

[tool.pytest.ini_options]
addopts = "--cov=vault_secret_cli --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4", "SIM", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["hvac", "hvac.*"]
ignore_missing_imports = true
